# Project-Untitled

./: .gitignore  2D Shooting Game.slnx  Animation.cpp  Animation.h  AnimationManager.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CMakePresets.json  Droids.cpp  Droids.h  Game.cpp  Game.h  README.md  Space Shooter.sln  Space Shooter.vcxproj  Space Shooter.vcxproj.filters  Starship.cpp  Starship.h  Whisper.cpp  Whisper.h  bullet.cpp  bullet.h  enemy.cpp  enemy.h  enemybullet.cpp  enemybullet.h  game.cpp  game.h  main.cpp  obstacle.cpp  obstacle.h  player.cpp  player.h
2D Shooter Game/: 2D Shooter Game.vcxproj  2D Shooter Game.vcxproj.filters  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Pickup.cpp  Pickup.h  Player.cpp  Player.h  main.cpp
2D Shooter Game/x64/Debug/: 2D Shooter Game.exe.recipe  2D Shooter Game.ilk  vc145.idb
src/: Main.cpp
src/audio/: AudioManager.cpp  AudioManager.h
src/bullet/: Bullet.cpp  Bullet.h
src/core/: Game.cpp  Game.h
src/enemy/: Boss.cpp  Boss.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h
src/gameplay/: WaveManager.cpp  WaveManager.h
src/graphics/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  ParticleSystem.cpp  ParticleSystem.h
src/pickup/: Pickup.cpp  Pickup.h  PickupManager.cpp  PickupManager.h
src/player/: Player.cpp  Player.h
src/resources/: ResourceManager.cpp  ResourceManager.h
src/save/: SaveManager.cpp  SaveManager.h
src/ui/: HUD.cpp  HUD.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h
src/weapon/: Weapon.cpp  Weapon.h
src/world/: TileMap.cpp  TileMap.h
tools/: Game.cpp  Game.h
(+13 files in other folders)
